testdata/baselines/reference/submodule/conformance/checkJsdocParamTag1.errors.txt
0.js(8,1): error TS2554: Expected 2 arguments, but got 0.
0.js(9,1): error TS2554: Expected 2 arguments, but got 1.


==== 0.js (2 errors) ====
    // @ts-check
    /**
     * @param {number=} n
     * @param {string} [s]
     */
    function foo(n, s) {}
    
    foo();
    ~~~
!!! error TS2554: Expected 2 arguments, but got 0.
!!! related TS6210 0.js:6:14: An argument for 'n' was not provided.
    foo(1);
    ~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 0.js:6:17: An argument for 's' was not provided.
    foo(1, "hi");